--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,7 @@ Thumbs.db
 
 # Ignore backup folders
 backup/
+
+# Package lock files (if you don't want them in your repo)
+package-lock.json
+yarn.lock
